add config file and update consumer to have multiple io threads to prevent starvation

--- a/src/settings.cfg
+++ b/src/settings.cfg
@@ -1,4 +1,5 @@
 [dmtp]
-dmtp_url='dmtp://54.84.59.135:21000'
-accountId='foodsafety'
-deviceId='amittest'
+dmtp_url=dmtp://54.84.59.135:21000
+accountId=foodsafety
+deviceId=amittest
+timer=120000
