--- a/config/circusd.config
+++ b/config/circusd.config
@@ -5,6 +5,9 @@ statsd = True
 [watcher:producer]
 cmd = python /home/pi/attack_on_titan/src/producer.py 
 
+[watcher:consumer]
+cmd = python /home/pi/attack_on_titan/src/consumer.py
+
 [watcher:webconsole]
 cmd = /usr/local/bin/circushttpd 
 
